@@ -53,7 +53,7 @@ body {
   font-family: arial;
   margin: 0;
   padding: none;
-  background: #ffa600;
+  background: #2e8c32;
   background-size: cover;
   text-align: center;
   overflow: hidden;
