@@ -5,7 +5,7 @@ AppCopyright=Copyright (C) 2020 MANUFACTURER
 AppPublisher=MANUFACTURER
 AppPublisherURL=http://www.spam.com
 AppSupportURL=http://www.spam.com
-AppVersion=1.0.0
+AppVersion=1.1.0
 VersionInfoVersion=1.0.0
 DefaultDirName={pf}\iPlugWorkshop
 DefaultGroupName=iPlugWorkshop
