@@ -20,17 +20,17 @@
 			<key>type</key>
 			<string>aumu</string>
 			<key>version</key>
-			<integer>65536</integer>
+			<integer>65792</integer>
 		</dict>
 	</array>
 	<key>AudioUnit Version</key>
-	<string>0x00010000</string>
+	<string>0x00010100</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
 	<string>iPlugWorkshop</string>
 	<key>CFBundleGetInfoString</key>
-	<string>iPlugWorkshop v1.0.0 Copyright 2020 Acme Inc</string>
+	<string>iPlugWorkshop v1.1.0 Copyright 2020 Acme Inc</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.DJLastword.audiounit.iPlugWorkshop</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -40,11 +40,11 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.0</string>
+	<string>1.1.0</string>
 	<key>CFBundleSignature</key>
 	<string>CgmD</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.0</string>
+	<string>1.1.0</string>
 	<key>CSResourcesFileMapped</key>
 	<true/>
 	<key>LSMinimumSystemVersion</key>
