@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>iPlugWorkshop</string>
 	<key>CFBundleGetInfoString</key>
-	<string>iPlugWorkshop v1.0.0 Copyright 2020 Acme Inc</string>
+	<string>iPlugWorkshop v1.1.0 Copyright 2020 Acme Inc</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.DJLastword.vst.iPlugWorkshop</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -17,11 +17,11 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.0</string>
+	<string>1.1.0</string>
 	<key>CFBundleSignature</key>
 	<string>CgmD</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.0</string>
+	<string>1.1.0</string>
 	<key>CSResourcesFileMapped</key>
 	<true/>
 	<key>LSMinimumSystemVersion</key>
